@@ -64,6 +64,11 @@
         name = "David Hilton"
     [/entry]
     [entry]
+        name = "Dolean Timotei(timotei)"
+        comment = "Eclipse UMC plugin"
+        email = "timotei21_AT_gmail.com"
+    [/entry]
+    [entry]
         name = "Dominic Bolin (Xan)"
     [/entry]
     [entry]
