@@ -111,6 +111,7 @@ Version 1.9.0-svn:
      systems
    * Added a way to compile wesnoth on windows by using CMake + MSVC9.
    * Added more command line arguments for starting a campaign+scenario
+   * Added command line "preprocess" to preprocess a specified file/folder and output the result
    * Fixed the ping timeout not waiting for the default ping interval when
      ping timeout is not set to 0
    * Fixed a bug in scoring of AI recall list. Patch by billynux.
